  - view-entity: merge the view-link element into the member element (also
    for DynamicViewEntity, DbViewEntity, *DbView screens)
- Service Facade
  - Added entity-auto support for the verb "store" which does a create if
    record does not exist and update if it does
  - Support of pre-configured scheduled job exists, see:
    http://www.quartz-scheduler.org/docs/cookbook/JobInitPlugin.html
- Tools Screens
  - Auto Screen
    - Order by links in column headers by default (by default for all
      auto fields entity as well)
  - Data View
    - Choose master entity, select fields from all related entities, save
      as DbViewEntity and related records
    - Specify functions for selected fields
    - Choose column(s) to order by
    - Specify search constraints
    - View in webapp
    - Export to CSV
  - Service
    - Select and run service from form based on service definition

===========================================================================
Release 1.0-beta2 - 30 May 2011
===========================================================================

The 1.0-beta2 release includes a number of new tools, most notably the Auto
Screen UI that creates a user interface based on entity and relationship
definitions for master entities, and tabs for the detail and associated
entities of each. This release also includes a number of smaller new
features and bug fixes found while building a variety of functionality
with Moqui Framework. One notable example of that is automatic or explicit
alternate screen selection based on the HTTP request User-Agent header, and
there is an example of alternate screens for the iPad.

Overall release 1.0-beta2 is more robust, functional, and reliable than the
previous release.

This release includes:

- All the great features of releases 1.0-preview1 to 1.0-beta1
- Changed so that web.requestParameters Map is automatically added to the
  context when it is initialized for the web (helps reduce dependency in